IRSA-4562: finderchart API broken